// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render properly 1`] = `
<div
  className="rounded"
  style={
    Object {
      "backgroundColor": "#c68c01",
      "borderRadius": undefined,
      "color": "#fff",
      "display": "inline-block",
      "fontSize": 14,
      "fontWeight": "normal",
      "height": 40,
      "lineHeight": "40px",
      "textAlign": "center",
      "verticalAlign": "top",
      "width": 40,
    }
  }
>
  F
</div>
`;

exports[`should render properly 2`] = `
<div
  className="rounded"
  style={
    Object {
      "backgroundColor": "#c68c01",
      "borderRadius": "50%",
      "color": "#fff",
      "display": "inline-block",
      "fontSize": 14,
      "fontWeight": "normal",
      "height": 40,
      "lineHeight": "40px",
      "textAlign": "center",
      "verticalAlign": "top",
      "width": 40,
    }
  }
>
  F
</div>
`;
